# ai-eng-110-final-project-ss-stomachslave

./: .dockerignore  .env.example  .gitignore  CONTRIBUTION_STATEMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
foodanalyzer/: __init__.py  __main__.py  api.py  cli.py  config.py  logging_config.py  models.py  offline.py  web_ui.py
foodanalyzer/concurrency/: __init__.py  pipeline.py
foodanalyzer/core/: __init__.py  analyzer.py
foodanalyzer/providers/: __init__.py  openrouter.py
foodanalyzer/services/: ai_service.py  nutrition_cache.py  rate_limiter.py  retry.py
foodanalyzer/storage/: repository.py  schema.sql
foodanalyzer/utils/: images.py
report/: report.tex
scripts/: bench.py
tests/: test_ai_service.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_images.py  test_openrouter.py  test_pipeline.py  test_repository.py  test_web_ui.py
